[gd_scene load_steps=55 format=4 uid="uid://okeh157g3swl"]

[ext_resource type="Script" uid="uid://bl0o2w56k0rk5" path="res://scripts/dortoire/piece.gd" id="1_6517k"]
[ext_resource type="Script" uid="uid://86xs8jxdfdb4" path="res://scripts/dortoire/murs.gd" id="2_gc0mp"]
[ext_resource type="Texture2D" uid="uid://dukqbq3p4ymna" path="res://assets/mur/Motifs_bleu.png" id="3_txmx5"]
[ext_resource type="Texture2D" uid="uid://cvgp3svwl2wo0" path="res://assets/mur/Mur_Vert.png" id="4_eoixc"]
[ext_resource type="Texture2D" uid="uid://bg3y8aynpsebo" path="res://assets/mur/Sombre.png" id="4_n8xyk"]
[ext_resource type="Texture2D" uid="uid://l8snwins3xjd" path="res://assets/sol/parquet-brun-clair-fin-(milieu)-pixilart(1).png" id="5_lguqs"]
[ext_resource type="Texture2D" uid="uid://biihxfugstveu" path="res://assets/sol/parquet-brun-clair-fin-(milieu)-pixilart.png" id="6_68ymg"]
[ext_resource type="Texture2D" uid="uid://fm5bui5nacmc" path="res://assets/sol/parquet-brun-clair-pixilart(1).png" id="6_6517k"]
[ext_resource type="Texture2D" uid="uid://trxci3tyhtj6" path="res://assets/sol/parquet-brun-clair-pixilart(2).png" id="7_ijx10"]
[ext_resource type="Texture2D" uid="uid://bdkow7n0au8bv" path="res://assets/sol/parquet-brun-clair-pixilart.png" id="8_wdoph"]
[ext_resource type="Texture2D" uid="uid://e41tvwpti1lr" path="res://assets/sol/pixilart-drawing(2).png" id="9_fc6x3"]
[ext_resource type="PackedScene" uid="uid://bidemcih0p3dj" path="res://scenes/dortoire/menu.tscn" id="10_svf3d"]
[ext_resource type="PackedScene" uid="uid://1slb4ng5gwih" path="res://scenes/dortoire/magasin.tscn" id="12_irfwe"]
[ext_resource type="AudioStream" uid="uid://db351d17gu0mw" path="res://musique/door_opening.ogg" id="14_6517k"]
[ext_resource type="AudioStream" uid="uid://johqbx3tpyhk" path="res://musique/magasin_background.mp3" id="15_ijx10"]
[ext_resource type="Script" uid="uid://ci6e1yq5r3qrp" path="res://scripts/dortoire/liste_objets.gd" id="15_wdoph"]
[ext_resource type="Texture2D" uid="uid://drf7mcph4p7lp" path="res://assets/dortoir/meubles/radiateur.png" id="16_fc6x3"]
[ext_resource type="AudioStream" uid="uid://2cgu5caxdtib" path="res://musique/people_talking.mp3" id="16_wdoph"]
[ext_resource type="AudioStream" uid="uid://dioknkfs7vb5c" path="res://musique/background.mp3" id="17_fc6x3"]
[ext_resource type="Script" uid="uid://boujxh0nhxyey" path="res://scripts/dortoire/object.gd" id="17_svf3d"]
[ext_resource type="Script" uid="uid://dcpbiu0wbk62p" path="res://scripts/dortoire/elem_menu.gd" id="18_ijx10"]
[ext_resource type="Texture2D" uid="uid://c6p4b7xpy4in2" path="res://assets/dortoir/broken_object/broken_lamp.png" id="19_q213m"]
[ext_resource type="Texture2D" uid="uid://b0m4g8wgsa0hi" path="res://assets/dortoir/meubles/Cadres.png" id="19_txmx5"]
[ext_resource type="Texture2D" uid="uid://djw3gqbcyhoau" path="res://assets/dortoir/broken_object/dust1.png" id="20_cx3ow"]
[ext_resource type="Texture2D" uid="uid://bs02k808qhxb7" path="res://assets/dortoir/meubles/Armoire.png" id="20_n8xyk"]
[ext_resource type="Texture2D" uid="uid://dos3isfllrblk" path="res://assets/dortoir/broken_object/dust2.png" id="21_i3j5g"]
[ext_resource type="PackedScene" uid="uid://bjqgfx63o5avc" path="res://scenes/dortoire/perso_1.tscn" id="21_svf3d"]
[ext_resource type="Texture2D" uid="uid://1qsqbymmy0m7" path="res://assets/dortoir/broken_object/lamp.png" id="22_gc0mp"]
[ext_resource type="Texture2D" uid="uid://cd237joxn36kf" path="res://assets/dortoir/meubles/Lampe.png" id="22_i5j5n"]
[ext_resource type="Script" uid="uid://bgujil4oqkot6" path="res://scripts/dortoire/broken_object.gd" id="23_cx3ow"]
[ext_resource type="Texture2D" uid="uid://ce1akmk2nfyv7" path="res://assets/dortoir/meubles/Plante1.png" id="23_s4r7p"]
[ext_resource type="Texture2D" uid="uid://bd86l8l4orwcq" path="res://assets/dortoir/meubles/Plante2.png" id="24_8h763"]
[ext_resource type="Texture2D" uid="uid://boxohe6g2bv3l" path="res://assets/dortoir/meubles/Pouf.png" id="25_bjw8p"]
[ext_resource type="Texture2D" uid="uid://cnumepxp7jbm4" path="res://assets/dortoir/meubles/Commode.png" id="26_7203c"]
[ext_resource type="Texture2D" uid="uid://s43gkmyg33pp" path="res://assets/dortoir/meubles/commode.png" id="27_w2gwh"]
[ext_resource type="Texture2D" uid="uid://cxbol6eopq3uo" path="res://assets/dortoir/meubles/lits.png" id="28_bi8xp"]
[ext_resource type="Texture2D" uid="uid://b4ju4xh8fku60" path="res://assets/dortoir/meubles/lit.png" id="29_ks8ap"]
[ext_resource type="Texture2D" uid="uid://cym15urgll8cb" path="res://assets/dortoir/meubles/fenetres.png" id="30_ogc1f"]
[ext_resource type="Texture2D" uid="uid://cy5kf4kslepng" path="res://assets/dortoir/meubles/grand_tapis.png" id="31_yjd3d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ip76g"]
texture = ExtResource("5_lguqs")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_avpxn"]
texture = ExtResource("6_68ymg")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_itmto"]
texture = ExtResource("6_6517k")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v4ikx"]
texture = ExtResource("7_ijx10")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3i8f6"]
texture = ExtResource("8_wdoph")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6g4tk"]
texture = ExtResource("9_fc6x3")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_duoh5"]
tile_size = Vector2i(70, 70)
sources/4 = SubResource("TileSetAtlasSource_3i8f6")
sources/5 = SubResource("TileSetAtlasSource_6g4tk")
sources/3 = SubResource("TileSetAtlasSource_v4ikx")
sources/2 = SubResource("TileSetAtlasSource_itmto")
sources/1 = SubResource("TileSetAtlasSource_avpxn")
sources/0 = SubResource("TileSetAtlasSource_ip76g")

[sub_resource type="TileSet" id="TileSet_ijx10"]
tile_size = Vector2i(70, 70)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ao46"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gghgv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gc0mp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3j5g"]

[sub_resource type="Animation" id="Animation_gc0mp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../marginContainer/textureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("19_q213m")]
}

[sub_resource type="Animation" id="Animation_i3j5g"]
resource_name = "reparer"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../marginContainer/textureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("20_cx3ow"), ExtResource("21_i3j5g"), ExtResource("20_cx3ow"), ExtResource("22_gc0mp")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gghgv"]
_data = {
&"RESET": SubResource("Animation_gc0mp"),
&"reparer": SubResource("Animation_i3j5g")
}

[node name="dortoir" type="Node2D" node_paths=PackedStringArray("Personnages")]
script = ExtResource("1_6517k")
Personnages = NodePath("perso")

[node name="murs" type="Node2D" parent="."]
z_index = -1
script = ExtResource("2_gc0mp")

[node name="murBleu" type="Sprite2D" parent="murs"]
visible = false
z_index = -3
position = Vector2(31.4999, -256.5)
scale = Vector2(2.978, 1.77222)
texture = ExtResource("3_txmx5")

[node name="murRouge" type="Sprite2D" parent="murs"]
visible = false
z_index = -3
position = Vector2(31.5001, -254)
scale = Vector2(2.978, -2.13333)
texture = ExtResource("4_n8xyk")

[node name="murVert" type="Sprite2D" parent="murs"]
z_index = -3
position = Vector2(31.4999, -254)
scale = Vector2(0.992667, 0.256)
texture = ExtResource("4_eoixc")

[node name="sol" type="TileMapLayer" parent="."]
z_index = -3
tile_map_data = PackedByteArray("AAD2////AgAAAAAAAAD2/wAAAgAAAAAAAAD2/wEAAgAAAAAAAAD2/wIAAgAAAAAAAAD2/wMAAgAAAAAAAAD2/wQAAgAAAAAAAAD2/wUAAgAAAAAAAAD3////BQAAAAAAAAD3/wAABQAAAAAAAAD3/wEABQAAAAAAAAD3/wIABQAAAAAAAAD3/wMABQAAAAAAAAD3/wQABQAAAAAAAAD3/wUABQAAAAAAAAD4////BQAAAAAAAAD4/wAABQAAAAAAAAD4/wEABQAAAAAAAAD4/wIABQAAAAAAAAD4/wMABQAAAAAAAAD4/wQABQAAAAAAAAD4/wUABQAAAAAAAAD5////BQAAAAAAAAD5/wAABQAAAAAAAAD5/wEABQAAAAAAAAD5/wIABQAAAAAAAAD5/wMABQAAAAAAAAD5/wQABQAAAAAAAAD5/wUABQAAAAAAAAD6////BQAAAAAAAAD6/wAABQAAAAAAAAD6/wEABQAAAAAAAAD6/wIABQAAAAAAAAD6/wMABQAAAAAAAAD6/wQABQAAAAAAAAD6/wUABQAAAAAAAAD7////BQAAAAAAAAD7/wAABQAAAAAAAAD7/wEABQAAAAAAAAD7/wIABQAAAAAAAAD7/wMABQAAAAAAAAD7/wQABQAAAAAAAAD7/wUABQAAAAAAAAD8////BQAAAAAAAAD8/wAABQAAAAAAAAD8/wEABQAAAAAAAAD8/wIABQAAAAAAAAD8/wMABQAAAAAAAAD8/wQABQAAAAAAAAD8/wUABQAAAAAAAAD9////BQAAAAAAAAD9/wAABQAAAAAAAAD9/wEABQAAAAAAAAD9/wIABQAAAAAAAAD9/wMABQAAAAAAAAD9/wQABQAAAAAAAAD9/wUABQAAAAAAAAD+////BQAAAAAAAAD+/wAABQAAAAAAAAD+/wEABQAAAAAAAAD+/wIABQAAAAAAAAD+/wMABQAAAAAAAAD+/wQABQAAAAAAAAD+/wUABQAAAAAAAAD/////BQAAAAAAAAD//wAABQAAAAAAAAD//wEABQAAAAAAAAD//wIABQAAAAAAAAD//wMABQAAAAAAAAD//wQABQAAAAAAAAD//wUABQAAAAAAAAAAAP//BQAAAAAAAAAAAAAABQAAAAAAAAAAAAEABQAAAAAAAAAAAAIABQAAAAAAAAAAAAMABQAAAAAAAAAAAAQABQAAAAAAAAAAAAUABQAAAAAAAAABAP//BQAAAAAAAAABAAAABQAAAAAAAAABAAEABQAAAAAAAAABAAIABQAAAAAAAAABAAMABQAAAAAAAAABAAQABQAAAAAAAAABAAUABQAAAAAAAAACAP//BQAAAAAAAAACAAAABQAAAAAAAAACAAEABQAAAAAAAAACAAIABQAAAAAAAAACAAMABQAAAAAAAAACAAQABQAAAAAAAAACAAUABQAAAAAAAAADAP//BQAAAAAAAAADAAAABQAAAAAAAAADAAEABQAAAAAAAAADAAIABQAAAAAAAAADAAMABQAAAAAAAAADAAQABQAAAAAAAAADAAUABQAAAAAAAAAEAP//BQAAAAAAAAAEAAAABQAAAAAAAAAEAAEABQAAAAAAAAAEAAIABQAAAAAAAAAEAAMABQAAAAAAAAAEAAQABQAAAAAAAAAEAAUABQAAAAAAAAAFAP//BQAAAAAAAAAFAAAABQAAAAAAAAAFAAEABQAAAAAAAAAFAAIABQAAAAAAAAAFAAMABQAAAAAAAAAFAAQABQAAAAAAAAAFAAUABQAAAAAAAAAGAP//BQAAAAAAAAAGAAAABQAAAAAAAAAGAAEABQAAAAAAAAAGAAIABQAAAAAAAAAGAAMABQAAAAAAAAAGAAQABQAAAAAAAAAGAAUABQAAAAAAAAAHAP//BQAAAAAAAAAHAAAABQAAAAAAAAAHAAEABQAAAAAAAAAHAAIABQAAAAAAAAAHAAMABQAAAAAAAAAHAAQABQAAAAAAAAAHAAUABQAAAAAAAAAIAP//BQAAAAAAAAAIAAAABQAAAAAAAAAIAAEABQAAAAAAAAAIAAIABQAAAAAAAAAIAAMABQAAAAAAAAAIAAQABQAAAAAAAAAIAAUABQAAAAAAAAAJAP//BQAAAAAAAAAJAAAABQAAAAAAAAAJAAEABQAAAAAAAAAJAAIABQAAAAAAAAAJAAMABQAAAAAAAAAJAAQABQAAAAAAAAAJAAUABQAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AwAAAAAAAAAKAAAAAwAAAAAAAAAKAAEAAwAAAAAAAAAKAAIAAwAAAAAAAAAKAAMAAwAAAAAAAAAKAAQAAwAAAAAAAAAKAAUAAwAAAAAAAAADAP7/BAAAAAAAAAAEAP7/BAAAAAAAAAAFAP7/BAAAAAAAAAAGAP7/BAAAAAAAAAAHAP7/BAAAAAAAAAAIAP7/BAAAAAAAAAAJAP7/BAAAAAAAAAD2//7/AQAAAAAAAAD3//7/BAAAAAAAAAD4//7/BAAAAAAAAAD5//7/BAAAAAAAAAD6//7/BAAAAAAAAAD7//7/BAAAAAAAAAD8//7/BAAAAAAAAAD9//7/BAAAAAAAAAD+//7/BAAAAAAAAAD///7/BAAAAAAAAAAAAP7/BAAAAAAAAAABAP7/BAAAAAAAAAACAP7/BAAAAAAAAAA=")
tile_set = SubResource("TileSet_duoh5")

[node name="ObjectBase" type="TileMapLayer" parent="sol"]
tile_set = SubResource("TileSet_ijx10")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(34, 0)
zoom = Vector2(0.78, 0.78)

[node name="menu" parent="." instance=ExtResource("10_svf3d")]
offset_left = 361.0
offset_top = -402.0
offset_right = 361.0
offset_bottom = -402.0
script = ExtResource("18_ijx10")

[node name="songs" type="Node" parent="."]

[node name="porte" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("14_6517k")

[node name="magasinBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("15_ijx10")

[node name="talkingPeople" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("16_wdoph")

[node name="mainBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("17_fc6x3")
autoplay = true

[node name="listeObjets" type="Node2D" parent="."]
script = ExtResource("15_wdoph")

[node name="Cadres" type="Sprite2D" parent="listeObjets"]
position = Vector2(-600.643, -304.857)
scale = Vector2(4.81786, 4.29286)
texture = ExtResource("19_txmx5")
script = ExtResource("17_svf3d")

[node name="Armoire" type="Sprite2D" parent="listeObjets"]
position = Vector2(-294, -258)
scale = Vector2(7.58988, 9.2108)
texture = ExtResource("20_n8xyk")
script = ExtResource("17_svf3d")

[node name="Lampe" type="Sprite2D" parent="listeObjets"]
position = Vector2(-139, -223)
scale = Vector2(4.79472, 5.79066)
texture = ExtResource("22_i5j5n")
script = ExtResource("17_svf3d")

[node name="Plante1" type="Sprite2D" parent="listeObjets"]
position = Vector2(130, 295)
scale = Vector2(5.29445, 5.28594)
texture = ExtResource("23_s4r7p")
script = ExtResource("17_svf3d")

[node name="Plante2" type="Sprite2D" parent="listeObjets"]
position = Vector2(292, 305)
scale = Vector2(6.4375, 7.31818)
texture = ExtResource("24_8h763")
script = ExtResource("17_svf3d")

[node name="Pouf" type="Sprite2D" parent="listeObjets"]
position = Vector2(-111, 327.625)
scale = Vector2(7.25, 6.53571)
texture = ExtResource("25_bjw8p")
script = ExtResource("17_svf3d")

[node name="Commode" type="Sprite2D" parent="listeObjets"]
position = Vector2(-39, -195)
scale = Vector2(5.92857, 6.77778)
texture = ExtResource("26_7203c")
script = ExtResource("17_svf3d")

[node name="store" parent="." instance=ExtResource("12_irfwe")]
visible = false
z_index = 4
position = Vector2(-691, -415)

[node name="perso" type="Node2D" parent="."]

[node name="perso" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("21_svf3d")]
position = Vector2(-137, 71)
ListeObjets = NodePath("../../listeObjets")

[node name="perso2" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("21_svf3d")]
position = Vector2(128, -16)
ListeObjets = NodePath("../../listeObjets")

[node name="perso3" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("21_svf3d")]
position = Vector2(-456, -181)
ListeObjets = NodePath("../../listeObjets")

[node name="brokenObject" type="Node2D" parent="."]
z_index = 3
position = Vector2(-654, -16)
scale = Vector2(0.439275, 0.44)
script = ExtResource("23_cx3ow")

[node name="objetCasse" type="Button" parent="brokenObject"]
z_index = 1
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ao46")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gghgv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gc0mp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i3j5g")
flat = true

[node name="btnReparer" type="Button" parent="brokenObject/objetCasse"]
visible = false
top_level = true
z_index = 3
layout_mode = 0
offset_left = -554.0
offset_top = 37.0
offset_right = -367.0
offset_bottom = 73.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20

[node name="marginContainer" type="MarginContainer" parent="brokenObject"]
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2

[node name="textureRect" type="TextureRect" parent="brokenObject/marginContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("19_q213m")
stretch_mode = 5

[node name="animationRepare" type="AnimationPlayer" parent="brokenObject/marginContainer/textureRect"]
unique_name_in_owner = true
root_node = NodePath("../../../objetCasse")
libraries = {
&"": SubResource("AnimationLibrary_gghgv")
}

[node name="decors" type="Node2D" parent="."]

[node name="Commode" type="Sprite2D" parent="decors"]
z_index = 2
position = Vector2(-609, 100)
scale = Vector2(9.20833, 9.75)
texture = ExtResource("27_w2gwh")

[node name="Lits" type="Sprite2D" parent="decors"]
z_index = 1
position = Vector2(-544, -61)
scale = Vector2(9.23387, 8.50806)
texture = ExtResource("28_bi8xp")

[node name="Lit" type="Sprite2D" parent="decors"]
z_index = 2
position = Vector2(-544, 265)
scale = Vector2(9.37903, 8.39516)
texture = ExtResource("29_ks8ap")

[node name="Fenetres" type="Sprite2D" parent="decors"]
position = Vector2(180, -300.125)
scale = Vector2(7.61905, 7.31522)
texture = ExtResource("30_ogc1f")

[node name="GrandTapis" type="Sprite2D" parent="decors"]
z_index = -1
position = Vector2(20, 77)
scale = Vector2(9.65686, 10.3095)
texture = ExtResource("31_yjd3d")

[node name="radiateur" type="Sprite2D" parent="decors"]
position = Vector2(-569, -172)
texture = ExtResource("16_fc6x3")

[connection signal="pressed" from="brokenObject/objetCasse" to="brokenObject" method="_on_objet_casse_pressed"]
[connection signal="pressed" from="brokenObject/objetCasse/btnReparer" to="." method="_on_btn_reparer_pressed"]

[editable path="store"]
